# transformer-scratch

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/transformer/: __init__.py  feed_forward.py  gpt2_model.py  layer_norm.py  multihead_attention.py  scaled_dot_product_attention.py  transformer.py
